<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:background="#21FFC107"
    tools:context=".Verifyenterotptwo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"


        >

    <ImageView
        android:id="@+id/image_sendotp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/img_1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/otp_verfication"
        android:textColor="@color/colortextfirst"
        android:textSize="20sp"
        android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50sp"
            android:gravity="center"
            android:text="@string/please_enter_the_otp_sent_to_you"
            android:textColor="@color/colortextsecond"
            android:textSize="14sp"

            />
        <TextView

            android:id="@+id/textmobileshownumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="50sp"
        android:gravity="center"
         android:textStyle="bold"
        android:textColor="@color/colortextfirst"
        android:textSize="14sp"

        />



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:gravity="center"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/inputotp1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/colortextfirst"
        android:textSize="24dp"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"

        />

    <EditText
        android:id="@+id/inputotp2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/colortextfirst"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/inputotp3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/colortextfirst"
        android:textSize="24dp"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"

        />

    <EditText
        android:id="@+id/inputotp4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/colortextfirst"
        android:textSize="24dp"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"

        />

    <EditText
        android:id="@+id/inputotp5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/colortextfirst"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"

        />

    <EditText
        android:id="@+id/inputotp6"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/colortextfirst"
        android:textSize="24dp"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"

        />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_receive_the_otp"
            android:textColor="@color/colortextsecond"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textresendotp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/resend_otp_again"
            android:textColor="@color/colortextfirst"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />


</LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/buttongetsubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_margin="30dp"
                android:textColor="@color/colortextfirst"
                android:background="@drawable/backgroundbutton"
                android:textStyle="bold"/>
           <ProgressBar
               android:id="@+id/verifyotp"
               android:layout_width="35dp"
               android:layout_height="35dp"
               android:layout_gravity="center"
               android:visibility="gone"/>

        </FrameLayout>


</LinearLayout>
</ScrollView>